--- a/style.css
+++ b/style.css
@@ -17,13 +17,17 @@ body{
     background-color: var(--body-bg);
     color: var(--text-clr);
     font-family: sans-serif;
+    overflow: hidden;
+}
+nav.nav{
+    width: 100vw;
 }
 
 .nav .list-container{
     display: flex;
     
     background-color: var(--white-bg);
-    gap: 1rem;
+    gap: calc(2vw + 2px);
     justify-content: center;
     
 }
@@ -85,8 +89,10 @@ body{
 }
 .theme-selector input[type='radio']{
     appearance: none;
-    width: 1rem;
-    height: 1rem;
+    width: clamp(0.5rem , 1vw, 2rem);
+    /* width: 1rem; */
+    /* height: 1rem; */
+    aspect-ratio: 1;
     outline: 3px solid var(--radio-color);
     outline-offset: 3px;
     border-radius: 50%;
