--- a/style.css
+++ b/style.css
@@ -125,9 +125,11 @@ header{
 header h1{
     font-size: clamp(2rem, 5vw, 3.5rem);
     font-weight: normal;
+    color: #323131;
 }
 header p{
-    font-size: clamp(1.5rem, 1vw, 3.5rem);
+    color: #868f90;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 /* for small devices */
