changed varible names

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
     --body-bg: hsl(0, 0%, 95%);
     --white-bg: rgb(255, 255, 255);
-    --text-clr: rgb(38, 38, 38);
-    --heading-clr: rgb(38, 38, 38);
+    --main-text-clr: #323131;
+    --secondary-text-clr: #757575;
     --border-clr: hsla(0, 0%, 23%, 0.323);
     --radio-color: black;
     --hr-clr: #dfdfdf;
@@ -16,17 +16,13 @@
 
 body{
     background-color: var(--body-bg);
-    color: var(--text-clr);
+    color: var(--main-text-clr);
     font-family: sans-serif;
     overflow-x: hidden;
     font-weight: normal;
 }
 nav.nav{
     width: 100vw;
-    box-shadow: 0px 5px 13px 2px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 0px 5px 13px 2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 5px 13px 2px rgba(0,0,0,0.75);
-    z-index: 99;
 }
 
 .nav .list-container{
@@ -43,11 +39,12 @@ nav.nav{
     text-align: center;
     list-style: none;
     cursor: pointer;
+    color: var(--main-text-clr);
 }
 
 .nav .list-container .list-item:nth-child(1){
-    background-color: rgb(15, 81, 161);
-    color: var(--white-bg);
+    background-color: rgb(15, 81, 161) !important;
+    color: var(--white-bg) !important;
 }
 
 .theme-option{
@@ -127,10 +124,11 @@ header{
 header h1{
     font-size: clamp(2rem, 5vw, 3.5rem);
     font-weight: normal;
-    color: #323131;
+    color: var(--main-text-clr);
 }
 header p{
-    color: #868f90;
+    color: #595f60;
+    font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -162,7 +160,7 @@ section > h2{
 }
 
 .product-card p{
-    color: #757575;
+    color: var(--secondary-text-clr);
 }
 
 .product-card h5{
@@ -199,8 +197,8 @@ section > h2{
 body.pinkTheme{
     --body-bg: hsl(0, 100%, 95%);
     --white-bg: hsl(0, 87%, 91%);
-    --text-clr: rgb(38, 38, 38);
-    --heading-clr: rgb(38, 38, 38);
+    --main-text-clr: rgb(38, 38, 38);
+    --secondary-text-clr: hsl(0, 25%, 48%);
     --border-clr: hsl(343, 51%, 61%);
     --radio-color: black;
     --hr-clr: #fff;
